JumpScript/tests/baselines/reference/unusedTypeParameters8.errors.txt
tests/cases/compiler/b.jump(1,13): error TS6133: 'T' is declared but its value is never read.


==== tests/cases/compiler/a.jump (0 errors) ====
    class C<T> { }
    
==== tests/cases/compiler/b.jump (1 errors) ====
    interface C<T> { }
                ~
!!! error TS6133: 'T' is declared but its value is never read.